5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1582_1332.log
== SUBMITION (2019-03-19 01:50:50) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- EXECUTION TIME:
0.130489
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:24:52) 
-- CODE:
aresta =5
area =  (3/2)*(3**0.5)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.174305
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
